Using django-widget-tweaks

--- a/booktime/Pipfile
+++ b/booktime/Pipfile
@@ -18,6 +18,7 @@ factory-boy = "*"
 django-debug-toolbar = "*"
 django-tables2 = "*"
 django-filter = "*"
+django-widget-tweaks = "*"
 
 [requires]
 python_version = "3.7"
