--- a/booktime/Pipfile
+++ b/booktime/Pipfile
@@ -19,6 +19,7 @@ django-debug-toolbar = "*"
 django-tables2 = "*"
 django-filter = "*"
 django-widget-tweaks = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
