--- a/booktime/Pipfile
+++ b/booktime/Pipfile
@@ -20,6 +20,8 @@ django-filter = "*"
 django-widget-tweaks = "*"
 djangorestframework = "*"
 django = "*"
+whitenoise = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.7"
